tryb.output
Rules useless in parser due to conflicts

   79 print: ID DOT SETDEFAULT OPENPAR types COMMA types CLOSPAR


State 9 conflicts: 1 shift/reduce
State 47 conflicts: 4 shift/reduce
State 53 conflicts: 6 shift/reduce
State 54 conflicts: 6 shift/reduce
State 60 conflicts: 2 shift/reduce
State 77 conflicts: 3 shift/reduce
State 83 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 188 conflicts: 4 shift/reduce
State 191 conflicts: 6 shift/reduce
State 196 conflicts: 1 shift/reduce
State 223 conflicts: 2 shift/reduce
State 232 conflicts: 1 shift/reduce
State 277 conflicts: 1 shift/reduce
State 284 conflicts: 1 shift/reduce
State 288 conflicts: 1 shift/reduce
State 309 conflicts: 1 shift/reduce
State 312 conflicts: 1 shift/reduce
State 319 conflicts: 1 shift/reduce
State 320 conflicts: 1 shift/reduce
State 335 conflicts: 1 shift/reduce
State 336 conflicts: 13 reduce/reduce
State 339 conflicts: 1 shift/reduce
State 351 conflicts: 1 shift/reduce
State 364 conflicts: 1 shift/reduce
State 370 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: %empty
    2      | statements start

    3 statements: assign
    4           | if
    5           | for
    6           | print
    7           | import
    8           | class
    9           | class_object
   10           | use_object
   11           | lambda
   12           | dict_setdefault
   13           | dict_items
   14           | break
   15           | return
   16           | func_def
   17           | call_func
   18           | NEWLINE

   19 expression: types
   20           | dictionaries
   21           | expression operators types
   22           | OPENPAR expression CLOSPAR

   23 types: add_letters
   24      | add_numbers
   25      | var_operations
   26      | lists

   27 add_letters: letters
   28            | letters operators add_letters
   29            | letters operators var_operations
   30            | letters operators add_obj

   31 add_numbers: numbers
   32            | numbers PLUS add_numbers
   33            | numbers MINUS add_numbers
   34            | numbers STAR add_numbers
   35            | numbers DIV add_numbers
   36            | numbers operators var_operations
   37            | numbers operators add_obj

   38 var_operations: ID
   39               | ID PLUS types
   40               | ID MINUS types
   41               | ID STAR types
   42               | ID DIV types

   43 add_obj: use_object
   44        | use_object operators types

   45 more_types: types
   46           | more_types COMMA types

   47 numbers: DIGIT
   48        | DEC
   49        | FLOATINT
   50        | OCT
   51        | BINARY
   52        | HEX
   53        | typenumber

   54 letters: STRING
   55        | STR OPENPAR types CLOSPAR
   56        | QUOTE QUOTE

   57 operators: PLUS
   58          | MINUS
   59          | DIV
   60          | STAR
   61          | DOUBLESTAR
   62          | MOD

   63 break: BREAK

   64 return: RETURN
   65       | RETURN more_types

   66 lists: OPENAG more_types CLOSAG

   67 dictionaries: OPENBR CLOSBR
   68             | OPENBR dictelements CLOSBR

   69 dictelements: moredictelem
   70             | dictelements COMMA moredictelem

   71 moredictelem: types COLON types

   72 dict_items: ID DOT ITEMS

   73 dict_setdefault: ID DOT SETDEFAULT OPENPAR types COMMA types CLOSPAR

   74 lambda: LAMBDA COLON expression
   75       | LAMBDA lambda_parameters COLON expression

   76 lambda_parameters: ID
   77                  | lambda_parameters COMMA ID

   78 print: PRINT OPENPAR print_star CLOSPAR
   79      | ID DOT SETDEFAULT OPENPAR types COMMA types CLOSPAR

   80 print_star: print_options
   81           | print_star COMMA print_options

   82 print_options: types
   83              | assign
   84              | call_func
   85              | dict_items
   86              | STRING MOD add_letters
   87              | STRING MOD add_numbers
   88              | STRING MOD var_operations
   89              | STRING MOD OPENPAR more_types CLOSPAR
   90              | LIST OPENPAR range CLOSPAR
   91              | range

   92 import: IMPORT module
   93       | FROM module IMPORT module
   94       | FROM module IMPORT STAR
   95       | IMPORT module AS ID

   96 module: id
   97       | module COMMA id

   98 id: ID
   99   | DOT
  100   | DOT id
  101   | id DOT ID

  102 assign: ID assign_symb ass_list
  103       | ID assign_symb expression
  104       | ID EQUAL dict_items
  105       | ID EQUAL lambda
  106       | ID EQUAL use_object
  107       | ID EQUAL QUOTE QUOTE

  108 assign_symb: EQUAL
  109            | PLUSEQ
  110            | MINUSEQ
  111            | STAREQ
  112            | DIVEQ

  113 ass_list: %empty
  114         | TRUE
  115         | FALSE
  116         | NONE

  117 typenumber: INT OPENPAR numbers CLOSPAR
  118           | FLOAT OPENPAR numbers CLOSPAR

  119 if: IF condition COLON more_statm
  120   | IF condition COLON more_statm NEWLINE ELSE COLON more_statm
  121   | IF condition COLON more_statm NEWLINE indent ELSE COLON more_statm
  122   | IF condition COLON more_statm NEWLINE ELIF condition COLON more_statm NEWLINE ELSE COLON more_statm
  123   | IF condition COLON more_statm NEWLINE indent ELIF condition COLON more_statm NEWLINE indent ELSE COLON more_statm

  124 condition: ass_list
  125          | expression cond_operators expression
  126          | expression log_operators expression
  127          | OPENPAR condition CLOSPAR

  128 cond_operators: GREATER
  129               | SMALLER
  130               | NOTEQ
  131               | EQEQ
  132               | GREQ
  133               | SMEQ

  134 log_operators: AND
  135              | OR

  136 indent: WHITESPACE
  137       | indent WHITESPACE

  138 more_statm: NEWLINE indent statements
  139           | more_statm NEWLINE indent statements

  140 for: FOR ID IN sequence COLON more_statm
  141    | FOR ID IN sequence COLON more_statm NEWLINE ELSE COLON more_statm

  142 sequence: ID
  143         | lists
  144         | dictionaries
  145         | range

  146 range: RANGE OPENPAR numbers CLOSPAR
  147      | RANGE OPENPAR numbers COMMA numbers CLOSPAR
  148      | RANGE OPENPAR numbers COMMA numbers COMMA numbers CLOSPAR
  149      | RANGE OPENPAR LEN OPENPAR ID CLOSPAR CLOSPAR

  150 class: CLASS classname COLON docstring

  151 classname: ID
  152          | ID OPENPAR CLOSPAR
  153          | ID OPENPAR class_attr CLOSPAR

  154 class_options: statements

  155 docstring: NEWLINE indent STRING NEWLINE more_class_options
  156          | more_class_options

  157 more_class_options: NEWLINE indent class_options
  158                   | more_class_options NEWLINE indent class_options

  159 class_attr: ID DOT ID
  160           | more_types class_attr
  161           | more_types

  162 const_options: NEWLINE indent ID DOT ID EQUAL types
  163              | const_options NEWLINE indent ID DOT ID EQUAL types
  164              | NEWLINE indent statements
  165              | const_options NEWLINE indent statements

  166 class_object: ID EQUAL ID OPENPAR CLOSPAR
  167             | ID EQUAL ID OPENPAR object_inside CLOSPAR

  168 object_inside: ID
  169              | letters
  170              | numbers
  171              | object_inside COMMA object_inside

  172 use_object: ID DOT ID
  173           | ID DOT call_func

  174 func_def: DEF ID OPENPAR CLOSPAR COLON func_options
  175         | DEF ID OPENPAR func_attr CLOSPAR COLON func_options
  176         | DEF INIT OPENPAR class_attr CLOSPAR COLON const_options

  177 func_attr: more_types
  178          | STAR ID
  179          | DOUBLESTAR ID
  180          | default_attr

  181 default_attr: ID EQUAL types

  182 func_options: NEWLINE indent statements
  183             | NEWLINE indent PASS
  184             | func_options NEWLINE indent statements

  185 call_func: ID OPENPAR CLOSPAR
  186          | ID OPENPAR call_options CLOSPAR

  187 call_options: ID
  188             | letters
  189             | numbers
  190             | call_options COMMA call_options
  191             | default_attr


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 119 120 121 122 123
ELSE (259) 120 121 122 123 141
ELIF (260) 122 123
LIST (261) 90
FLOAT (262) 118
COMMA (263) 46 70 73 77 79 81 97 147 148 171 190
FROM (264) 93 94
DOT (265) 72 73 79 99 100 101 159 162 163 172 173
INT (266) 117
FOR (267) 140 141
IN (268) 140 141
LEN (269) 149
RANGE (270) 146 147 148 149
NEWLINE (271) 18 120 121 122 123 138 139 141 155 157 158 162 163 164
    165 182 183 184
NONE (272) 116
COLON (273) 71 74 75 119 120 121 122 123 140 141 150 174 175 176
OPENAG (274) 66
CLOSAG (275) 66
OPENBR (276) 67 68
CLOSBR (277) 67 68
EQUAL (278) 104 105 106 107 108 162 163 166 167 181
AS (279) 95
LAMBDA (280) 74 75
PLUS (281) 32 39 57
MINUS (282) 33 40 58
DIV (283) 35 42 59
STAR (284) 34 41 60 94 178
MOD (285) 62 86 87 88 89
DEF (286) 174 175 176
STRING (287) 54 86 87 88 89 155
TRUE (288) 114
FALSE (289) 115
QUOTE (290) 56 107
PRINT (291) 78
STR (292) 55
PASS (293) 183
BREAK (294) 63
RETURN (295) 64 65
OPENPAR (296) 22 55 73 78 79 89 90 117 118 127 146 147 148 149 152
    153 166 167 174 175 176 185 186
CLOSPAR (297) 22 55 73 78 79 89 90 117 118 127 146 147 148 149 152
    153 166 167 174 175 176 185 186
IMPORT (298) 92 93 94 95
CLASS (299) 150
DOUBLESTAR (300) 61 179
PLUSEQ (301) 109
MINUSEQ (302) 110
STAREQ (303) 111
DIVEQ (304) 112
AND (305) 134
OR (306) 135
INIT (307) 176
SETDEFAULT (308) 73 79
ITEMS (309) 72
GREATER (310) 128
SMALLER (311) 129
EQEQ (312) 131
GREQ (313) 132
SMEQ (314) 133
NOTEQ (315) 130
WHITESPACE (316) 136 137
DEC (317) 48
DIGIT (318) 47
BINARY (319) 51
FLOATINT (320) 49
HEX (321) 52
OCT (322) 50
ID (323) 38 39 40 41 42 72 73 76 77 79 95 98 101 102 103 104 105 106
    107 140 141 142 149 151 152 153 159 162 163 166 167 168 172 173
    174 175 178 179 181 185 186 187


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
start (70)
    on left: 1 2, on right: 0 2
statements (71)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 2
    138 139 154 164 165 182 184
expression (72)
    on left: 19 20 21 22, on right: 21 22 74 75 103 125 126
types (73)
    on left: 23 24 25 26, on right: 19 21 39 40 41 42 44 45 46 55 71
    73 79 82 162 163 181
add_letters (74)
    on left: 27 28 29 30, on right: 23 28 86
add_numbers (75)
    on left: 31 32 33 34 35 36 37, on right: 24 32 33 34 35 87
var_operations (76)
    on left: 38 39 40 41 42, on right: 25 29 36 88
add_obj (77)
    on left: 43 44, on right: 30 37
more_types (78)
    on left: 45 46, on right: 46 65 66 89 160 161 177
numbers (79)
    on left: 47 48 49 50 51 52 53, on right: 31 32 33 34 35 36 37 117
    118 146 147 148 170 189
letters (80)
    on left: 54 55 56, on right: 27 28 29 30 169 188
operators (81)
    on left: 57 58 59 60 61 62, on right: 21 28 29 30 36 37 44
break (82)
    on left: 63, on right: 14
return (83)
    on left: 64 65, on right: 15
lists (84)
    on left: 66, on right: 26 143
dictionaries (85)
    on left: 67 68, on right: 20 144
dictelements (86)
    on left: 69 70, on right: 68 70
moredictelem (87)
    on left: 71, on right: 69 70
dict_items (88)
    on left: 72, on right: 13 85 104
dict_setdefault (89)
    on left: 73, on right: 12
lambda (90)
    on left: 74 75, on right: 11 105
lambda_parameters (91)
    on left: 76 77, on right: 75 77
print (92)
    on left: 78 79, on right: 6
print_star (93)
    on left: 80 81, on right: 78 81
print_options (94)
    on left: 82 83 84 85 86 87 88 89 90 91, on right: 80 81
import (95)
    on left: 92 93 94 95, on right: 7
module (96)
    on left: 96 97, on right: 92 93 94 95 97
id (97)
    on left: 98 99 100 101, on right: 96 97 100 101
assign (98)
    on left: 102 103 104 105 106 107, on right: 3 83
assign_symb (99)
    on left: 108 109 110 111 112, on right: 102 103
ass_list (100)
    on left: 113 114 115 116, on right: 102 124
typenumber (101)
    on left: 117 118, on right: 53
if (102)
    on left: 119 120 121 122 123, on right: 4
condition (103)
    on left: 124 125 126 127, on right: 119 120 121 122 123 127
cond_operators (104)
    on left: 128 129 130 131 132 133, on right: 125
log_operators (105)
    on left: 134 135, on right: 126
indent (106)
    on left: 136 137, on right: 121 123 137 138 139 155 157 158 162
    163 164 165 182 183 184
more_statm (107)
    on left: 138 139, on right: 119 120 121 122 123 139 140 141
for (108)
    on left: 140 141, on right: 5
sequence (109)
    on left: 142 143 144 145, on right: 140 141
range (110)
    on left: 146 147 148 149, on right: 90 91 145
class (111)
    on left: 150, on right: 8
classname (112)
    on left: 151 152 153, on right: 150
class_options (113)
    on left: 154, on right: 157 158
docstring (114)
    on left: 155 156, on right: 150
more_class_options (115)
    on left: 157 158, on right: 155 156 158
class_attr (116)
    on left: 159 160 161, on right: 153 160 176
const_options (117)
    on left: 162 163 164 165, on right: 163 165 176
class_object (118)
    on left: 166 167, on right: 9
object_inside (119)
    on left: 168 169 170 171, on right: 167 171
use_object (120)
    on left: 172 173, on right: 10 43 44 106
func_def (121)
    on left: 174 175 176, on right: 16
func_attr (122)
    on left: 177 178 179 180, on right: 175
default_attr (123)
    on left: 181, on right: 180 191
func_options (124)
    on left: 182 183 184, on right: 174 175 184
call_func (125)
    on left: 185 186, on right: 17 84 173
call_options (126)
    on left: 187 188 189 190 191, on right: 186 190


State 0

    0 $accept: . start $end

    IF       shift, and go to state 1
    FROM     shift, and go to state 2
    FOR      shift, and go to state 3
    NEWLINE  shift, and go to state 4
    LAMBDA   shift, and go to state 5
    DEF      shift, and go to state 6
    PRINT    shift, and go to state 7
    BREAK    shift, and go to state 8
    RETURN   shift, and go to state 9
    IMPORT   shift, and go to state 10
    CLASS    shift, and go to state 11
    ID       shift, and go to state 12

    $default  reduce using rule 1 (start)

    start            go to state 13
    statements       go to state 14
    break            go to state 15
    return           go to state 16
    dict_items       go to state 17
    dict_setdefault  go to state 18
    lambda           go to state 19
    print            go to state 20
    import           go to state 21
    assign           go to state 22
    if               go to state 23
    for              go to state 24
    class            go to state 25
    class_object     go to state 26
    use_object       go to state 27
    func_def         go to state 28
    call_func        go to state 29


State 1

  119 if: IF . condition COLON more_statm
  120   | IF . condition COLON more_statm NEWLINE ELSE COLON more_statm
  121   | IF . condition COLON more_statm NEWLINE indent ELSE COLON more_statm
  122   | IF . condition COLON more_statm NEWLINE ELIF condition COLON more_statm NEWLINE ELSE COLON more_statm
  123   | IF . condition COLON more_statm NEWLINE indent ELIF condition COLON more_statm NEWLINE indent ELSE COLON more_statm

    FLOAT     shift, and go to state 30
    INT       shift, and go to state 31
    NONE      shift, and go to state 32
    OPENAG    shift, and go to state 33
    OPENBR    shift, and go to state 34
    STRING    shift, and go to state 35
    TRUE      shift, and go to state 36
    FALSE     shift, and go to state 37
    QUOTE     shift, and go to state 38
    STR       shift, and go to state 39
    OPENPAR   shift, and go to state 40
    DEC       shift, and go to state 41
    DIGIT     shift, and go to state 42
    BINARY    shift, and go to state 43
    FLOATINT  shift, and go to state 44
    HEX       shift, and go to state 45
    OCT       shift, and go to state 46
    ID        shift, and go to state 47

    $default  reduce using rule 113 (ass_list)

    expression      go to state 48
    types           go to state 49
    add_letters     go to state 50
    add_numbers     go to state 51
    var_operations  go to state 52
    numbers         go to state 53
    letters         go to state 54
    lists           go to state 55
    dictionaries    go to state 56
    ass_list        go to state 57
    typenumber      go to state 58
    condition       go to state 59


State 2

   93 import: FROM . module IMPORT module
   94       | FROM . module IMPORT STAR

    DOT  shift, and go to state 60
    ID   shift, and go to state 61

    module  go to state 62
    id      go to state 63


State 3

  140 for: FOR . ID IN sequence COLON more_statm
  141    | FOR . ID IN sequence COLON more_statm NEWLINE ELSE COLON more_statm

    ID  shift, and go to state 64


State 4

   18 statements: NEWLINE .

    $default  reduce using rule 18 (statements)


State 5

   74 lambda: LAMBDA . COLON expression
   75       | LAMBDA . lambda_parameters COLON expression

    COLON  shift, and go to state 65
    ID     shift, and go to state 66

    lambda_parameters  go to state 67


State 6

  174 func_def: DEF . ID OPENPAR CLOSPAR COLON func_options
  175         | DEF . ID OPENPAR func_attr CLOSPAR COLON func_options
  176         | DEF . INIT OPENPAR class_attr CLOSPAR COLON const_options

    INIT  shift, and go to state 68
    ID    shift, and go to state 69


State 7

   78 print: PRINT . OPENPAR print_star CLOSPAR

    OPENPAR  shift, and go to state 70


State 8

   63 break: BREAK .

    $default  reduce using rule 63 (break)


State 9

   64 return: RETURN .
   65       | RETURN . more_types

    FLOAT     shift, and go to state 30
    INT       shift, and go to state 31
    OPENAG    shift, and go to state 33
    STRING    shift, and go to state 35
    QUOTE     shift, and go to state 38
    STR       shift, and go to state 39
    DEC       shift, and go to state 41
    DIGIT     shift, and go to state 42
    BINARY    shift, and go to state 43
    FLOATINT  shift, and go to state 44
    HEX       shift, and go to state 45
    OCT       shift, and go to state 46
    ID        shift, and go to state 47

    ID        [reduce using rule 64 (return)]
    $default  reduce using rule 64 (return)

    types           go to state 71
    add_letters     go to state 50
    add_numbers     go to state 51
    var_operations  go to state 52
    more_types      go to state 72
    numbers         go to state 53
    letters         go to state 54
    lists           go to state 55
    typenumber      go to state 58


State 10

   92 import: IMPORT . module
   95       | IMPORT . module AS ID

    DOT  shift, and go to state 60
    ID   shift, and go to state 61

    module  go to state 73
    id      go to state 63


State 11

  150 class: CLASS . classname COLON docstring

    ID  shift, and go to state 74

    classname  go to state 75


State 12

   72 dict_items: ID . DOT ITEMS
   73 dict_setdefault: ID . DOT SETDEFAULT OPENPAR types COMMA types CLOSPAR
   79 print: ID . DOT SETDEFAULT OPENPAR types COMMA types CLOSPAR
  102 assign: ID . assign_symb ass_list
  103       | ID . assign_symb expression
  104       | ID . EQUAL dict_items
  105       | ID . EQUAL lambda
  106       | ID . EQUAL use_object
  107       | ID . EQUAL QUOTE QUOTE
  166 class_object: ID . EQUAL ID OPENPAR CLOSPAR
  167             | ID . EQUAL ID OPENPAR object_inside CLOSPAR
  172 use_object: ID . DOT ID
  173           | ID . DOT call_func
  185 call_func: ID . OPENPAR CLOSPAR
  186          | ID . OPENPAR call_options CLOSPAR

    DOT      shift, and go to state 76
    EQUAL    shift, and go to state 77
    OPENPAR  shift, and go to state 78
    PLUSEQ   shift, and go to state 79
    MINUSEQ  shift, and go to state 80
    STAREQ   shift, and go to state 81
    DIVEQ    shift, and go to state 82

    assign_symb  go to state 83


State 13

    0 $accept: start . $end

    $end  shift, and go to state 84


State 14

    2 start: statements . start

    IF       shift, and go to state 1
    FROM     shift, and go to state 2
    FOR      shift, and go to state 3
    NEWLINE  shift, and go to state 4
    LAMBDA   shift, and go to state 5
    DEF      shift, and go to state 6
    PRINT    shift, and go to state 7
    BREAK    shift, and go to state 8
    RETURN   shift, and go to state 9
    IMPORT   shift, and go to state 10
    CLASS    shift, and go to state 11
    ID       shift, and go to state 12

    $default  reduce using rule 1 (start)
